# gene-variation-effects-ml

./: .gitignore  LICENSE  Makefile  README.md  notes.md  notes.txt  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
gene_variation_effects/: __init__.py  dataset.py  features.py  plots.py
gene_variation_effects/modeling/: __init__.py  modelarchitectures.py  pipelines.py  split.py  testing.py  train.py  utils.py
models/: BRCA1model.pth
notebooks/: 0.0-od-initial-eda.ipynb  BRCA1.ipynb  generate_phylo_data.ipynb  main.ipynb  utils.ipynb
references/: dict.txt
