[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gene_variation_effects"
version = "0.0.1"
description = "A machine learning pipeline aiming to identify and classify variations in genes to identify pathogenir benign variations."
authors = [
  { name = "Jeffrey Bringolf, Olivier Demers" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "httplib2>=0.31.0",
    "ipython",
    "jupyter>=1.1.1",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "myvariant>=1.0.0",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pybigwig>=0.3.24",
    "pyliftover>=0.4.1",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "tqdm",
    "typer",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["gene_variation_effects"]
include = ["pyproject.toml", "gene_variation_effects/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["gene_variation_effects"]
force-sort-within-sections = true

